# Soundcheck

./: .eslintrc.json  .gitignore  .prettierrc  .stylelintrc.json  LICENSE  README.md  Spotlite Issues.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  npm.yml  rust.yml  style.yml  test.yml
public/: styles.css
public/fonts/: material-symbols-outlined.css  roboto.css
public/icons/: icon.icns
src/: App.svelte  index.ts  material-symbols-outlined.css  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  main.rs  playback.rs
src/lib/: PollingStore.ts  PollingWritable.ts  controls.ts  keyboard.ts  menu.ts  playback.ts  settings.ts  stores.ts  subStore.ts  theme.ts  utils.ts
src/lib/components/: ActionButton.svelte  Background.svelte  Button.svelte  CloseButton.svelte  Controls.svelte  DynamicBackground.svelte  IconButton.svelte  LogIn.svelte  Menu.svelte  MenuItem.svelte  PlayPauseFAB.svelte  ProgressBar.svelte  ProgressIndicator.svelte  SettingsMenu.svelte  Snackbar.svelte  SongInfo.svelte  TrackInfo.svelte  VolumeControl.svelte  Wave.svelte
src/lib/components/button/: Button.svelte  LogIn.svelte  context.ts  index.ts
src/lib/components/container/: AppContainer.svelte  Row.svelte  Stack.svelte  index.ts
src/lib/components/controls/: ControlBar.svelte  PlayPauseFab.svelte  ProgressBar.svelte  VolumeControl.svelte  Wave.svelte  controls.ts  index.ts
src/lib/components/icon/: DynamicIcon.svelte  Spinner.svelte  index.ts
src/lib/components/menu/: DeviceMenu.svelte  MainMenu.svelte  Menu.svelte  MenuItem.svelte  context.ts  index.ts
src/lib/sm3lte/: Button.svelte  MaterialThemeController.ts  ProgressIndicator.svelte  Snackbar.svelte  Switch.svelte  types.ts
src/lib/sm3lte/styles/: default-scheme.css  elevation.css  shape.css  state.css  typography.css
src/lib/sub_components/: Button.svelte  Snackbar.svelte  Switch.svelte  Wave.svelte
src/lib/tests/: App.spec.ts  MaterialThemeController.spec.ts  playback.spec.ts  stores.spec.ts  test.data.ts  theme.spec.ts  utils.spec.ts
src/routes/: +layout.svelte  +page.svelte
tests/: App.spec.ts  playback.spec.ts  test.data.ts  theme.spec.ts  utils.spec.ts
