[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }
dotenv-build = "0.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["clipboard-write-text", "window-close", "window-create", "window-start-dragging"] }
window-shadows = "0.2.1"
rspotify = { git = "https://github.com/NDoolan360/rspotify", branch = "master" }
log = "0.4.17"
chrono = "0.4.24"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
